Corrected image urls in stylesheets.

--- a/app/stylesheets/_initial_theme.sass
+++ b/app/stylesheets/_initial_theme.sass
@@ -86,7 +86,7 @@ div
     li
       display: block
       float: left
-      background: url(../images/navigation_li_bg.jpg) no-repeat right top
+      background: url(../../images/navigation_li_bg.jpg) no-repeat right top
       list-style: none
       margin: 0px
       margin-right: 4px
@@ -96,7 +96,7 @@ div
       display: block
       float: left
       font-size: 11px
-      background: url(../images/navigation_a_bg.jpg) no-repeat left top
+      background: url(../../images/navigation_a_bg.jpg) no-repeat left top
       color: rgb(255,255,255)
       height: 16px
       text-decoration: none
@@ -108,10 +108,10 @@ div
 
     li
       &.active
-        background: url(../images/navigation_li_active_bg.jpg) no-repeat right top
+        background: url(../../images/navigation_li_active_bg.jpg) no-repeat right top
 
         a
-          background: url(../images/navigation_a_active_bg.jpg) no-repeat left top
+          background: url(../../images/navigation_a_active_bg.jpg) no-repeat left top
 
       &.right_side
         float: right
@@ -164,12 +164,12 @@ div
     a
       display: block
       float: right
-      background: url(../images/new_event_button.jpg)
+      background: url(../../images/new_event_button.jpg)
       width: 100px
       height: 24px
 
       &:hover
-        background: url(../images/new_event_button_hover.jpg)
+        background: url(../../images/new_event_button_hover.jpg)
 
     span
       position: absolute
@@ -179,12 +179,12 @@ div
     a
       display: block
       float: right
-      background: url(../images/new_page_button.jpg)
+      background: url(../../images/new_page_button.jpg)
       width: 100px
       height: 24px
 
       &:hover
-        background: url(../images/new_page_button_hover.jpg)
+        background: url(../../images/new_page_button_hover.jpg)
 
     span
       position: absolute
@@ -194,12 +194,12 @@ div
     a
       display: block
       float: right
-      background: url(../images/new_forum_button.jpg)
+      background: url(../../images/new_forum_button.jpg)
       width: 100px
       height: 24px
 
       &:hover
-        background: url(../images/new_forum_button_hover.jpg)
+        background: url(../../images/new_forum_button_hover.jpg)
 
     span
       position: absolute
@@ -209,12 +209,12 @@ div
     a
       display: block
       float: right
-      background: url(../images/new_user_button.jpg)
+      background: url(../../images/new_user_button.jpg)
       width: 100px
       height: 24px
 
       &:hover
-        background: url(../images/new_user_button_hover.jpg)
+        background: url(../../images/new_user_button_hover.jpg)
 
     span
       position: absolute
@@ -224,12 +224,12 @@ div
     a
       display: block
       float: right
-      background: url(../images/new_image_button.jpg)
+      background: url(../../images/new_image_button.jpg)
       width: 130px
       height: 24px
 
       &:hover
-        background: url(../images/new_image_button_hover.jpg)
+        background: url(../../images/new_image_button_hover.jpg)
 
     span
       position: absolute
@@ -239,12 +239,12 @@ div
     a
       display: block
       float: right
-      background: url(../images/new_friend_button.jpg)
+      background: url(../../images/new_friend_button.jpg)
       width: 130px
       height: 24px
 
       &:hover
-        background: url(../images/new_friend_button_hover.jpg)
+        background: url(../../images/new_friend_button_hover.jpg)
 
     span
       position: absolute
@@ -254,14 +254,14 @@ div
     a
       display: block
       float: right
-      background: url(../images/new_message_button.jpg)
+      background: url(../../images/new_message_button.jpg)
       width: 130px
       height: 24px
       clear: right
       margin-top: 5px
 
       &:hover
-        background: url(../images/new_message_button_hover.jpg)
+        background: url(../../images/new_message_button_hover.jpg)
 
     span
       position: absolute
@@ -321,7 +321,7 @@ div
         float: left
 
         div.bar
-          background: url(../images/loading_bar.gif) repeat-x
+          background: url(../../images/loading_bar.gif) repeat-x
           height: 20px
           width: 50%
 
@@ -378,7 +378,7 @@ div
 
     td
       &.blocked
-        background: url(../images/blocked.jpg)
+        background: url(../../images/blocked.jpg)
 
       &.meetings
         background: rgb(240,200,200)
@@ -595,7 +595,7 @@ div
       height: 80px
 
       &.blocked
-        background: url(../images/blocked.jpg)
+        background: url(../../images/blocked.jpg)
 
       &.meetings
         background: rgb(240,200,200)
@@ -890,16 +890,16 @@ body
 
       &.navigation
         li
-          background: url(../images/red_navigation_li_bg.jpg) no-repeat right top
+          background: url(../../images/red_navigation_li_bg.jpg) no-repeat right top
 
         a
-          background: url(../images/red_navigation_a_bg.jpg) no-repeat left top
+          background: url(../../images/red_navigation_a_bg.jpg) no-repeat left top
 
         li.active
-          background: url(../images/red_navigation_li_active_bg.jpg) no-repeat right top
+          background: url(../../images/red_navigation_li_active_bg.jpg) no-repeat right top
 
           a
-            background: url(../images/red_navigation_a_active_bg.jpg) no-repeat left top
+            background: url(../../images/red_navigation_a_active_bg.jpg) no-repeat left top
 
       &.footer p
         color: rgb(0,0,0)
@@ -916,16 +916,16 @@ body
 
       &.navigation
         li
-          background: url(../images/cyan_navigation_li_bg.jpg) no-repeat right top
+          background: url(../../images/cyan_navigation_li_bg.jpg) no-repeat right top
 
         a
-          background: url(../images/cyan_navigation_a_bg.jpg) no-repeat left top
+          background: url(../../images/cyan_navigation_a_bg.jpg) no-repeat left top
 
         li.active
-          background: url(../images/cyan_navigation_li_active_bg.jpg) no-repeat right top
+          background: url(../../images/cyan_navigation_li_active_bg.jpg) no-repeat right top
 
           a
-            background: url(../images/cyan_navigation_a_active_bg.jpg) no-repeat left top
+            background: url(../../images/cyan_navigation_a_active_bg.jpg) no-repeat left top
 
       &.footer p
         color: rgb(0,0,0)
@@ -942,16 +942,16 @@ body
 
       &.navigation
         li
-          background: url(../images/green_navigation_li_bg.jpg) no-repeat right top
+          background: url(../../images/green_navigation_li_bg.jpg) no-repeat right top
 
         a
-          background: url(../images/green_navigation_a_bg.jpg) no-repeat left top
+          background: url(../../images/green_navigation_a_bg.jpg) no-repeat left top
 
         li.active
-          background: url(../images/green_navigation_li_active_bg.jpg) no-repeat right top
+          background: url(../../images/green_navigation_li_active_bg.jpg) no-repeat right top
 
           a
-            background: url(../images/green_navigation_a_active_bg.jpg) no-repeat left top
+            background: url(../../images/green_navigation_a_active_bg.jpg) no-repeat left top
 
       &.footer p
         color: rgb(0,0,0)
@@ -968,16 +968,16 @@ body
 
       &.navigation
         li
-          background: url(../images/purple_navigation_li_bg.jpg) no-repeat right top
+          background: url(../../images/purple_navigation_li_bg.jpg) no-repeat right top
 
         a
-          background: url(../images/purple_navigation_a_bg.jpg) no-repeat left top
+          background: url(../../images/purple_navigation_a_bg.jpg) no-repeat left top
 
         li.active
-          background: url(../images/purple_navigation_li_active_bg.jpg) no-repeat right top
+          background: url(../../images/purple_navigation_li_active_bg.jpg) no-repeat right top
 
           a
-            background: url(../images/purple_navigation_a_active_bg.jpg) no-repeat left top
+            background: url(../../images/purple_navigation_a_active_bg.jpg) no-repeat left top
 
       &.footer p
         color: rgb(0,0,0)
@@ -994,16 +994,16 @@ body
 
       &.navigation
         li
-          background: url(../images/yellow_navigation_li_bg.jpg) no-repeat right top
+          background: url(../../images/yellow_navigation_li_bg.jpg) no-repeat right top
 
         a
-          background: url(../images/yellow_navigation_a_bg.jpg) no-repeat left top
+          background: url(../../images/yellow_navigation_a_bg.jpg) no-repeat left top
 
         li.active
-          background: url(../images/yellow_navigation_li_active_bg.jpg) no-repeat right top
+          background: url(../../images/yellow_navigation_li_active_bg.jpg) no-repeat right top
 
           a
-            background: url(../images/yellow_navigation_a_active_bg.jpg) no-repeat left top
+            background: url(../../images/yellow_navigation_a_active_bg.jpg) no-repeat left top
 
       &.footer p
         color: rgb(0,0,0)
@@ -1020,16 +1020,16 @@ body
 
       &.navigation
         li
-          background: url(../images/blue_navigation_li_bg.jpg) no-repeat right top
+          background: url(../../images/blue_navigation_li_bg.jpg) no-repeat right top
 
         a
-          background: url(../images/blue_navigation_a_bg.jpg) no-repeat left top
+          background: url(../../images/blue_navigation_a_bg.jpg) no-repeat left top
 
         li.active
-          background: url(../images/blue_navigation_li_active_bg.jpg) no-repeat right top
+          background: url(../../images/blue_navigation_li_active_bg.jpg) no-repeat right top
 
           a
-            background: url(../images/blue_navigation_a_active_bg.jpg) no-repeat left top
+            background: url(../../images/blue_navigation_a_active_bg.jpg) no-repeat left top
 
       &.footer p
         color: rgb(0,0,0)
