--- a/app/stylesheets/partials/_brands.sass
+++ b/app/stylesheets/partials/_brands.sass
@@ -42,6 +42,6 @@ div
   
   &.buttons
     .add.new_brand
-      background: url('/images/new_brand_button.jpg')
+      background: url(../../images/new_brand_button.jpg)
       &:hover
-        background: url('/images/new_brand_button_hover.jpg')
+        background: url(../../images/new_brand_button_hover.jpg)
