--- a/app/stylesheets/partials/_flash.sass
+++ b/app/stylesheets/partials/_flash.sass
@@ -10,10 +10,10 @@
     :weight bold
     :size 14px
   &#error
-    :background #C00 url(/images/exclamation.png) no-repeat scroll 6px 50%
+    :background #C00 url(../../images/exclamation.png) no-repeat scroll 6px 50%
     :border-color #C99
   &#notice, &#success
-    :background #060 url(/images/accept.png) no-repeat scroll 6px 50%
+    :background #060 url(../../images/accept.png) no-repeat scroll 6px 50%
     :border-color #9c9
   
   a, a:visited
