--- a/app/stylesheets/partials/_header.sass
+++ b/app/stylesheets/partials/_header.sass
@@ -61,7 +61,7 @@ div
     li
       display: block
       float: left
-      background: url('/images/navigation_li_bg.jpg') no-repeat right top
+      background: url(../../images/navigation_li_bg.jpg) no-repeat right top
       list-style: none
       margin: 0px
       margin-right: 4px
@@ -71,7 +71,7 @@ div
       display: block
       float: left
       font-size: 12px
-      background: url('/images/navigation_a_bg.jpg') no-repeat left top
+      background: url(../../images/navigation_a_bg.jpg) no-repeat left top
       color: rgb(255,255,255)
       text-decoration: none
       margin: 0px
@@ -82,10 +82,10 @@ div
 
     li
       &.active
-        background: url('/images/navigation_li_active_bg.jpg') no-repeat right top
+        background: url(../../images/navigation_li_active_bg.jpg) no-repeat right top
 
         a
-          background: url('/images/navigation_a_active_bg.jpg') no-repeat left top
+          background: url(../../images/navigation_a_active_bg.jpg) no-repeat left top
 
       &.right_side
         float: right
