Corrected image urls in stylesheets.

--- a/app/stylesheets/partials/_team.sass
+++ b/app/stylesheets/partials/_team.sass
@@ -40,6 +40,6 @@ div
             background: rgb(255,0,0)
   &.buttons
     .add.new_user
-      background: url('/images/new_user_button.jpg')
+      background: url(../../images/new_user_button.jpg)
       &:hover
-        background: url('/images/new_user_button_hover.jpg')
+        background: url(../../images/new_user_button_hover.jpg)
