--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -1,22 +1,25 @@
 - title "Your account information"
 
-.buttons
-  = link_to "Edit", edit_account_path, :class => "edit"
-  
-.card-info
-  %div
-    Full Name on card:
-    = "#{h @account.card_first_name} #{h @account.card_last_name}"
-  %div
-    Postal Code:
-    = h @account.card_postal_code
-  %div
-    Card Type: 
-    = @account.card_type
-  %div
-    Credit Card last 4 digits:
-    = @account.card_number_last_4_digits
+.span-12
+  = render :partial => "plan_info"
 
-  %div
-    Credit Card expiration date:
-    = @account.card_expiration_date
+.span-12
+  .buttons
+    = link_to "Edit", edit_account_path, :class => "edit"
+  .card-info
+    %div
+      Full Name on card:
+      = "#{h @account.card_first_name} #{h @account.card_last_name}"
+    %div
+      Postal Code:
+      = h @account.card_postal_code
+    %div
+      Card Type: 
+      = @account.card_type
+    %div
+      Credit Card last 4 digits:
+      = @account.card_number_last_4_digits
+
+    %div
+      Credit Card expiration date:
+      = @account.card_expiration_date
