--- a/app/views/accounts/edit.html.haml
+++ b/app/views/accounts/edit.html.haml
@@ -2,28 +2,32 @@
 
 = error_messages_for :account
 
-- semantic_form_for @account, :url => account_path, :html => { :class => "card" } do |f|
-  - f.inputs do
-    = f.input :first_name, :label => "First name on card", :input_html => { :value => @account.card_first_name }
-    = f.input :last_name, :label => "Last name on card", :input_html => { :value => @account.card_last_name }
-    = f.input :postal_code, :input_html => { :value => @account.card_postal_code }
+.span-12
+  = render :partial => "plan_info"
+
+.span-12
+  - semantic_form_for @account, :url => account_path, :html => { :class => "card" } do |f|
+    - f.inputs do
+      = f.input :first_name, :label => "First name on card", :input_html => { :value => @account.card_first_name }
+      = f.input :last_name, :label => "Last name on card", :input_html => { :value => @account.card_last_name }
+      = f.input :postal_code, :input_html => { :value => @account.card_postal_code }
     
-    %li#accepted_card_types
-      %label Accepted Card Types:
-      %ul#accepted_cards
-        %li.visa Visa
-        %li.mastercard MasterCard
-        %li.amex American Express
-        %li.discover Discover
-        %li.jcb JCB
-        %li.dinners Dinners
+      %li#accepted_card_types
+        %label Accepted Card Types:
+        %ul#accepted_cards
+          %li.visa Visa
+          %li.mastercard MasterCard
+          %li.amex American Express
+          %li.discover Discover
+          %li.jcb JCB
+          %li.dinners Dinners
         
-    = f.input :card_number
-    %li#account_expiration_date.string
-      = label_tag "Expiration Date*"
-      = f.select :expiration_month,  ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12"]
-      \/
-      = f.select :expiration_year,  Time.now.year.to_i..(Time.now.year+10).to_i
-    = f.input :cvv, :label => "Card verification number"
-  - f.buttons do
-    = f.commit_button "Update information"
+      = f.input :card_number
+      %li#account_expiration_date.string
+        = label_tag "Expiration Date*"
+        = f.select :expiration_month,  ["01", "02", "03", "04", "05", "06", "07", "08", "09", "10", "11", "12"]
+        \/
+        = f.select :expiration_year,  Time.now.year.to_i..(Time.now.year+10).to_i
+      = f.input :cvv, :label => "Card verification number"
+    - f.buttons do
+      = f.commit_button "Update information"
