WIP plan limits: showing search terms and team members limits. Added dependent => destroy to Brand#brand_queries

--- a/app/views/accounts/_plan_info.haml
+++ b/app/views/accounts/_plan_info.haml
@@ -10,4 +10,9 @@
       %tr
         %th Your trial expires on
         %td #{@account.trial_days_left.days.from_now.to_date.to_s(:long)}
-      
+    %tr
+      %th Search terms left
+      %td= @account.search_terms_left
+    %tr
+      %th Team members left
+      %td= @account.team_members_left
