--- a/app/views/accounts/_plan_info.haml
+++ b/app/views/accounts/_plan_info.haml
@@ -10,6 +10,10 @@
       %tr
         %th Your trial expires on
         %td #{@account.trial_days_left.days.from_now.to_date.to_s(:long)}
+    - if @account.have_subscription?
+      %tr
+        %th Your next charge
+        %td= @account.next_billing_date.to_s(:long)
     %tr
       %th Search terms left
       %td= @account.search_terms_left
