improved optimization migrations; moved status flag near temperature links

--- a/app/stylesheets/partials/_results.sass
+++ b/app/stylesheets/partials/_results.sass
@@ -29,10 +29,12 @@ div
           :float right
           a
             :text-decoration none
+        &.status
+          :float right
     .body
       +general_font
       :margin-bottom 5px
-    .status, .result_link
+    .view_links, .result_link
       :font-size 11px
       :margin-bottom 5px
   &.read
