adding a small bit of text to the signup page so they know where they are

--- a/app/views/accounts/new.html.haml
+++ b/app/views/accounts/new.html.haml
@@ -1,6 +1,11 @@
 - title "Register for an account"
 
 .content
+
+  :textile
+    All we need from you to get started with BrandPulse is a login and an email address to send your password to.
+    <br />
+    
   - semantic_form_for @account, :url => account_path, :html => { :class => "account large" } do |f|
     - f.fields_for :holder do |holder_form|
       - f.inputs do
