--- a/doc/wp_pages/custom.css
+++ b/doc/wp_pages/custom.css
@@ -14,6 +14,11 @@
 	padding-left: 5px;
 }
 
+div.learn-more {
+	padding-left: 20px;
+	font-style: italic;
+}
+
 button, .awesome, .awesome:visited {
 	background: #222 url(/images/alert-overlay.png) repeat-x; 
 	display: inline-block; 
