Manually merged optimizations branch with: optimizations to brand results, updating past due subscriptions, requiring account holder to manage brands and users, payment history from BrainTree shown in account, comp/uncomp account.

--- a/app/stylesheets/partials/_account.sass
+++ b/app/stylesheets/partials/_account.sass
@@ -25,3 +25,20 @@ ul#accepted_cards
     li
       :padding-left 10px
       :color #8A1F11
+
+.card-info, #plan-info, .transactions-info
+  table
+    th, td
+      :padding 3px 5px
+    th
+      :font-weight bold
+
+.transactions-info
+  table
+    td
+      :border-top 1px solid #ddd
+  h3
+    :padding-left 5px
+    :font
+      :size 14px
+      :weight bold
