--- a/app/stylesheets/partials/_flash.sass
+++ b/app/stylesheets/partials/_flash.sass
@@ -15,6 +15,10 @@
   &#notice, &#success
     :background #060 url(../../images/accept.png) no-repeat scroll 6px 50%
     :border-color #9c9
+  &#warning
+    :color #514721 
+    :background #fff6bf url(../../images/warning.png) no-repeat scroll 6px 50%
+    :border-color #ffd324
   
   a, a:visited
     :color black
