--- a/app/stylesheets/partials/_results.sass
+++ b/app/stylesheets/partials/_results.sass
@@ -34,7 +34,7 @@ div
     .body
       +general_font
       :margin-bottom 5px
-    .view_links, .result_link
+    .view_links
       :font-size 11px
       :margin-bottom 5px
   &.read
