--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -7,19 +7,38 @@
   .buttons
     = link_to "Edit", edit_account_path, :class => "edit"
   .card-info
-    %div
-      Full Name on card:
-      = "#{h @account.card_first_name} #{h @account.card_last_name}"
-    %div
-      Postal Code:
-      = h @account.card_postal_code
-    %div
-      Card Type: 
-      = @account.card_type
-    %div
-      Credit Card last 4 digits:
-      = @account.card_number_last_4_digits
+    %table
+      %tr
+        %th Full Name on card:
+        %td= "#{h @account.card_first_name} #{h @account.card_last_name}"
+      %tr
+        %th Postal Code:
+        %td= h @account.card_postal_code
+      %tr
+        %th Card Type: 
+        %td= @account.card_type
+      %tr
+        %th Credit Card last 4 digits:
+        %td= @account.card_number_last_4_digits
+      %tr
+        %th Credit Card expiration date:
+        %td= @account.card_expiration_date
 
-    %div
-      Credit Card expiration date:
-      = @account.card_expiration_date
+.span-24.last.transactions-info
+  - if @account.subscription_transactions && @account.subscription_transactions.size > 0
+    %h3 Payments history
+    %table
+      %tr
+        %th Date
+        %th Credit Card
+        %th Amount
+        %th Plan
+        %th
+      - @account.subscription_transactions.each do |st|
+        %tr
+          %td= st.last_update.to_s(:short)
+          %td= st.card_number_last_4_digits
+          %td= st.amount
+          %td= st.plan
+          %td= link_to "Receipt", account_subscription_transaction_path(st)
+  
