--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -15,7 +15,7 @@
 @import partials/team.sass
 @import partials/formtastic_base.sass
 @import partials/forms.sass
-@import partials/logs.sass
+@import partials/dashboard.sass
 @import partials/comments.sass
 @import partials/account.sass
 @import partials/date-picker/jquery-ui-1.8.sass
