--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -3,9 +3,6 @@
   %head
     %title BrandPulse
     = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
-    =# stylesheet_link_tag 'compiled/print.css', :media => 'print'
-    /[if lte IE 8]
-      =# stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
 
     = yield :head
   %body
@@ -14,11 +11,11 @@
         .top
           %h1
             %span
-              = link_to 'BrandPulse', brand_results_path
+              = link_to 'BrandPulse', root_path
           .account-links
             %ul
-              %li= link_to "Login", new_user_session_path
-              %li= link_to "Sign up", new_account_path
+              %li= link_to "Login", new_user_session_path(:secure => true)
+              %li= link_to "Sign up", new_account_path(:secure => true)
       .wrapper
         .content_wrap
           - if show_title?
