added TOS checkbox on account/user activation pages; moved screen_name, location and email_updates flag to new user_detail model; Cleaned up user model; fixes specs; fixed features;

--- a/app/stylesheets/partials/_forms.sass
+++ b/app/stylesheets/partials/_forms.sass
@@ -31,6 +31,12 @@ form.formtastic
       &.string, &.password
         input
           :width 480px
+      &.boolean
+        input
+          :margin 0 5px 0 0
+        &.error
+          input
+            :width auto
       &.error
         input
           :width 455px
