Removed temperature links.

--- a/app/views/brand_results/_brand_result.html.haml
+++ b/app/views/brand_results/_brand_result.html.haml
@@ -4,8 +4,8 @@
       = brand_result.brand
     %div.state_links
       = brand_result.state_links.join(" | ")
-    %div.temperature_links
-      = "[ #{brand_result.temperature_links.join(" | ")} ]"
+    / %div.temperature_links
+    /   = "[ #{brand_result.temperature_links.join(" | ")} ]"
     %div.status
       = brand_result.status
   %div.body
