Fixed copyright year.

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -3,6 +3,7 @@
   |
   %a{:href => '/about'} About
 %p
-  &copy; 2009
+  &copy;
+  = Date.today.year
   %a{:href => 'http://bddcasts.com', :title => 'BDD Screencasts'} BDDCasts.com
 = render "shared/uservoice"
