--- a/app/views/activations/new.html.haml
+++ b/app/views/activations/new.html.haml
@@ -4,7 +4,7 @@
   - f.inputs do
     = f.input :password
     = f.input :password_confirmation
-    = f.input :tos_agreement, :as => :boolean, :label => "I agree to the terms of service."
+    = f.input :tos_agreement, :as => :boolean, :label => 'I agree to the <a href="http://getbrandpulse.com/terms-of-use" target="_blank">terms of use</a>.'
     - f.fields_for :user_detail do |user_detail|
       = user_detail.input :email_updates, :required => false, :label => "I want to receive updates through email."
   - f.buttons do
